# Vessel

./: .gitmodules  .gitpod.Dockerfile  .gitpod.yml  AppTest.cpp  CMakeLists.txt  LICENSE  README.md  imgui.ini
.cache/clangd/index/: AppTest.cpp.96A9C5D2532F8E2A.idx  AppTest.cpp.E03E88C790F51744.idx  Application.cpp.8C9F42FB334F25B7.idx  Application.h.187208F04C9E4053.idx  ApplicationEvent.h.D3590F798C4868C5.idx  Base.h.0577CB570B4E794E.idx  Entrypoint.h.ECF64ED220F84FB0.idx  Event.h.F15A742B066359A2.idx  GladTest.cpp.3EC45A413DAA161E.idx  GraphicsContext.h.AFA672B9CD436067.idx  ImGuiBuild.cpp.C9DDF88D5B6EC883.idx  ImGuiLayer.cpp.50D2C3499641ECBB.idx  ImGuiLayer.h.DA050346705E2B01.idx  ImGuiOpenGLRenderer.cpp.55871B52B0C30305.idx  ImGuiOpenGLRenderer.h.FCE13C032A9AF46E.idx  Input.h.E69B44F2C171BE7A.idx  KeyCodes.h.3DF2E42F3FC2A305.idx  KeyEvent.h.6E885ABB587EFB8C.idx  Layer.cpp.8430BA934C6C8548.idx  Layer.h.9631794723D18041.idx  LayerStack.cpp.2BA74A1F100EA5FC.idx  LayerStack.h.42239665D20CE3F5.idx  Log.cpp.88787B5E2E982E50.idx  Log.h.867F6800BEBF0120.idx  MouseEvent.h.3BD772BF66380B34.idx  OpenGLContext.cpp.19E5614AE326EF77.idx  OpenGLContext.h.CBA1FEDE4C59D9A5.idx  Platform.h.374BA043B7C12051.idx  PlatformInput.cpp.3BB53FD683461C10.idx  PlatformInput.h.7D02FDFEE3F9D69A.idx  Vessel.h.F69BF3F655A160C5.idx  Window.h.A241ECEFEF47D2E1.idx  WindowsWindow.cpp.6948C5A57FB3CF06.idx  WindowsWindow.h.8203E13D95FD2A00.idx  _fixes.hpp.1738186E24519FDD.idx  _vectorize.hpp.028AA23DC30614B6.idx  ansicolor_sink-inl.h.6770E7C0A75E1AC9.idx  ansicolor_sink.h.484C35234E0AE871.idx  backtracer-inl.h.0F061559DCDF3BB3.idx  backtracer.h.45C861AEC37E399E.idx  (+223 more)
.theia/: launch.json  settings.json
Sandbox/: AppTest.cpp
glad/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  glad.c  glad_glx.c
include/glad/: glad.h  glad_glx.h
include/spdlog/fmt/bundled/: core.h
src/: Brainchild.cpp  Vessel.h  VesselAPI.h
src/Core/: Application.cpp  Application.h  Base.h  Entrypoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  Platform.h  Window.h
src/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
src/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
src/Platform/: PlatformInput.cpp  PlatformInput.h  WindowsWindow.cpp  WindowsWindow.h
src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLContext.cpp  OpenGLContext.h
src/Renderer/: GraphicsContext.h
